--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <h1 id="titre">Mes Projets</h1>
             </div>
             <div class="mediaButtonsProjects">
-                <button><a href="https://brize-glace.github.io/page-produit"><i class="fab fa-product-hunt"></i> Page
+                <button><a href="https://brize-glace.github.io/page-produit" target="_blank"><i class="fab fa-product-hunt"></i> Page
                         Produit</a></button>
-                <button><a href="https://www.behance.net/gallery/154418497Belle-Ile-en-Mer-%28France%29-August-2022"><i
+                <button><a href="https://www.behance.net/gallery/154418497Belle-Ile-en-Mer-%28France%29-August-2022" target="_blank"<i
                             class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</a></button>
-                <button><a href="https://behance.net/romainviktor"><i class="fab fa-behance"></i> Mon
+                <button><a href="https://behance.net/romainviktor" target="_blank"><i class="fab fa-behance"></i> Mon
                         Behance</a></button>
-                <button><a href="https://guthub.com/Brize-Glace"><i class="fab fa-github"></i> Github</a></button>
+                <button><a href="https://guthub.com/Brize-Glace" target="_blank"><i class="fab fa-github"></i> Github</a></button>
             </div>
 
             <!-- <div class="container">
