--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="mediaButtonsProjects">
                 <button><a href="https://brize-glace.github.io/page-produit" target="_blank"><i class="fab fa-product-hunt"></i> Page
                         Produit</a></button>
-                <button><a href="https://www.behance.net/gallery/154418497Belle-Ile-en-Mer-%28France%29-August-2022" target="_blank"<i
+                <button><a href="https://www.behance.net/gallery/154418497Belle-Ile-en-Mer-%28France%29-August-2022" target="_blank"><i
                             class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</a></button>
                 <button><a href="https://behance.net/romainviktor" target="_blank"><i class="fab fa-behance"></i> Mon
                         Behance</a></button>
