--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <p>Je m'appelle Romain, j'ai 16 ans, j'habite en France depuis 2012. Je suis actuellement en 1ère fillière
                 Générale avec les spécialités Maths, Physique-Chimie et Numérique Sciences de l'Informatique (NSI). <br>
                 <br> J'ai vécu une bonne partie de mon enfance en Suisse Allemande dans la ville de Winterthur. Je me
-                passionne pour la photographie suite à un stage de 3ème. Je m'essaye au developpement web et au web design.
+                passionne pour la photographie suite à un stage de 3ème. Je m'essaye au developpement web et au web
+                design.
             </p>
         </div>
         <div id="projects">
@@ -76,13 +77,15 @@
                 <h1 id="titre">Mes Projets</h1>
             </div>
             <div class="mediaButtonsProjects">
-                <button><a href="https://brize-glace.github.io/page-produit" target="_blank"><i class="fab fa-product-hunt"></i> Page
+                <button><a href="https://brize-glace.github.io/page-produit" target="_blank"><i
+                            class="fab fa-product-hunt"></i> Page
                         Produit</a></button>
-                <button><a href="https://www.behance.net/gallery/154418497Belle-Ile-en-Mer-%28France%29-August-2022" target="_blank"><i
-                            class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</a></button>
+                <button><a href="https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-(France)-August-2022/modules/871338741"
+                        target="_blank"><i class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</a></button>
                 <button><a href="https://behance.net/romainviktor" target="_blank"><i class="fab fa-behance"></i> Mon
                         Behance</a></button>
-                <button><a href="https://guthub.com/Brize-Glace" target="_blank"><i class="fab fa-github"></i> Github</a></button>
+                <button><a href="https://github.com/Brize-Glace" target="_blank"><i class="fab fa-github"></i>
+                        Github</a></button>
             </div>
 
             <!-- <div class="container">
