Some modification for the buttons

--- a/index.html
+++ b/index.html
@@ -77,15 +77,10 @@
                 <h1 id="titre">Mes Projets</h1>
             </div>
             <div class="mediaButtonsProjects">
-                <button><a href="https://brize-glace.github.io/page-produit" target="_blank"><i
-                            class="fab fa-product-hunt"></i> Page
-                        Produit</a></button>
-                <button><a href="https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-(France)-August-2022/modules/871338741"
-                        target="_blank"><i class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</a></button>
-                <button><a href="https://behance.net/romainviktor" target="_blank"><i class="fab fa-behance"></i> Mon
-                        Behance</a></button>
-                <button><a href="https://github.com/Brize-Glace" target="_blank"><i class="fab fa-github"></i>
-                        Github</a></button>
+                <button onclick="window.open('https://brize-glace.github.io/page-produit', '_blank')"><i class="fab fa-product-hunt"></i> Page Produit</button>
+                <button onclick="window.open('https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-%28France%29-August-2022', '_blank')"><i class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</button>
+                <button onclick="window.open('https://behance.net/romainviktor', '_blank')"><i class="fab fa-behance"></i> Mon Behance</button>
+                <button onclick="window.open('https://github.com/Brize-Glace', '_blank')"><i class="fab fa-github"></i> Github</button>
             </div>
 
             <!-- <div class="container">
