--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </center>
         </div>
     </div>
+
     <div class="main">
         <div id="about">
             <div id="titre-main">
@@ -74,40 +75,52 @@
         </div>
         <div id="projects">
             <div id="titre-main">
-                <h1 id="titre">Mes Projets</h1>
+                <h1 id="titre">Mes Projets <span>BETA</span></h1>
             </div>
-            <div class="mediaButtonsProjects">
+            <!-- <div class="mediaButtonsProjects">
                 <button onclick="window.open('https://brize-glace.github.io/page-produit', '_blank')"><i class="fab fa-product-hunt"></i> Page Produit</button>
                 <button onclick="window.open('https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-%28France%29-August-2022', '_blank')"><i class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</button>
                 <button onclick="window.open('https://behance.net/romainviktor', '_blank')"><i class="fab fa-behance"></i> Mon Behance</button>
                 <button onclick="window.open('https://github.com/Brize-Glace', '_blank')"><i class="fab fa-github"></i> Github</button>
-            </div>
-
-            <!-- <div class="container">
-                <div class="text">
-                    Tout mes projets!
-                    <br> <br>
-                    <button id="btnProjectsView">Voir Maintenant</button>
-                </div>
-                <div class="image">
-                    <img src="Capture.PNG" alt="image" style="border-radius: 8px;">
-                </div>
             </div> -->
+            <div class="card-row">
+                <div class="card">
+                  <img src="Capture.PNG" alt="Image 1">
+                  <div class="card-text">
+                    <h3><i class="fab fa-behance"></i></h3>
+                    <p><a href="">Aller vers mon Behance <i  class="fas fa-arrow-right"></i></a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="Capture.PNG" alt="Image 2">
+                  <div class="card-text">
+                    <h3><i class="fab fa-github"></i></h3>
+                    <p><a href="">Aller vers mon github <i  class="fas fa-arrow-right"></i></a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <img src="Capture.PNG" alt="Image 3">
+                  <div class="card-text">
+                    <h3><i class="fab fa-behance"></i> - Belle Ile en Mer <span>NEW</span></h3>
+                    <p><a href="">Voir mon projet <i  class="fas fa-arrow-right"></i></a></p>
+                  </div>
+                </div>
+              </div>
+              
         </div>
-
     </div>
     <div id="contact"></div>
-    <div id="conatct-titre">
-        <h1 id="titre">Contact</h1>
+    <div id="contact-titre">
+        <h1 id="titre">Contact <span>SOON</span></h1>
     </div>
     <div id="contact-para">
-        <h2>Coming later...</h2>
+        <h2>Les informations de contact ne sont pas disponible pour le moment</h2>
     </div>
 
     </div>
 
     <footer>
-        &copy; Romain Viktorovitch 2022 - Open Source <br> <a href="cgu.html">Conditions Générales D'utilisations</a>
+        &copy; Romain Viktorovitch 2022 - Open Source MIT License<br> <a href="cgu.html">Conditions Générales D'utilisations</a>
     </footer>
     <script src="source\js\app.js"></script>
 </body>
