added pop-up when error, updated the header animation

--- a/index.html
+++ b/index.html
@@ -77,36 +77,33 @@
             <div id="titre-main">
                 <h1 id="titre">Mes Projets <span>BETA</span></h1>
             </div>
-            <!-- <div class="mediaButtonsProjects">
-                <button onclick="window.open('https://brize-glace.github.io/page-produit', '_blank')"><i class="fab fa-product-hunt"></i> Page Produit</button>
-                <button onclick="window.open('https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-%28France%29-August-2022', '_blank')"><i class="fas fa-anchor"></i> Belle-Île en Mer (August 2022)</button>
-                <button onclick="window.open('https://behance.net/romainviktor', '_blank')"><i class="fab fa-behance"></i> Mon Behance</button>
-                <button onclick="window.open('https://github.com/Brize-Glace', '_blank')"><i class="fab fa-github"></i> Github</button>
-            </div> -->
             <div class="card-row">
                 <div class="card">
-                  <img src="Capture.PNG" alt="Image 1">
-                  <div class="card-text">
-                    <h3><i class="fab fa-behance"></i></h3>
-                    <p><a href="">Aller vers mon Behance <i  class="fas fa-arrow-right"></i></a></p>
-                  </div>
+                    <img src="Capture.PNG" alt="Image 1">
+                    <div class="card-text">
+                        <h3><i class="fab fa-behance"></i></h3>
+                        <p><a href="https://behance.net/romainviktor" target="_blank">Aller vers mon Behance <i
+                                    class="fas fa-arrow-right"></i></a></p>
+                    </div>
                 </div>
                 <div class="card">
-                  <img src="Capture.PNG" alt="Image 2">
-                  <div class="card-text">
-                    <h3><i class="fab fa-github"></i></h3>
-                    <p><a href="">Aller vers mon github <i  class="fas fa-arrow-right"></i></a></p>
-                  </div>
+                    <img src="Capture.PNG" alt="Image 2">
+                    <div class="card-text">
+                        <h3><i class="fab fa-github"></i></h3>
+                        <p><a href="https://github.com/Brize-Glace" target="_blank">Aller vers mon github <i
+                                    class="fas fa-arrow-right"></i></a></p>
+                    </div>
                 </div>
                 <div class="card">
-                  <img src="Capture.PNG" alt="Image 3">
-                  <div class="card-text">
-                    <h3><i class="fab fa-behance"></i> - Belle Ile en Mer <span>NEW</span></h3>
-                    <p><a href="">Voir mon projet <i  class="fas fa-arrow-right"></i></a></p>
-                  </div>
+                    <img src="Capture.PNG" alt="Image 3">
+                    <div class="card-text">
+                        <h3><i class="fab fa-behance"></i> - Belle Ile en Mer <span>NEW</span></h3>
+                        <p><a href="https://www.behance.net/gallery/154418497/Belle-Ile-en-Mer-%28France%29-August-2022"
+                                target="_blank">Voir mon projet <i class="fas fa-arrow-right"></i></a></p>
+                    </div>
                 </div>
-              </div>
-              
+            </div>
+
         </div>
     </div>
     <div id="contact"></div>
@@ -117,11 +114,16 @@
         <h2>Les informations de contact ne sont pas disponible pour le moment</h2>
     </div>
 
-    </div>
-
+    <div id="alert-box" class="alert-box">
+        <h2>Un bug trouvé?</h2>
+        <p>L'erreur s'affiche sur votre écran, n'hésitez pas a la signaler <a href="https://www.google.com" target="_blank">ici</a>!</p>
+        <button class="close-btn" onclick="closeAlertBox()">Fermer</button>
+      </div>
     <footer>
-        &copy; Romain Viktorovitch 2022 - Open Source MIT License<br> <a href="cgu.html">Conditions Générales D'utilisations</a>
+        &copy; Romain Viktorovitch 2022 - Open Source <a href="license.html">MIT License</a><br> <a
+            href="cgu.html">Conditions Générales D'utilisations</a>
     </footer>
+
     <script src="source\js\app.js"></script>
 </body>
 
