bug on link for pup-up

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <div id="alert-box" class="alert-box">
         <h2>Un bug trouvé?</h2>
-        <p>L'erreur s'affiche sur votre écran, n'hésitez pas a la signaler <a href="https://www.google.com" target="_blank">ici</a>!</p>
+        <p>L'erreur s'affiche sur votre écran, n'hésitez pas a la signaler <a href="https://github.com/Brize-Glace/Brize-Glace.github.io/discussions" target="_blank">ici</a>!</p>
         <button class="close-btn" onclick="closeAlertBox()">Fermer</button>
       </div>
     <footer>
