New license, please read the new license.

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <button class="close-btn" onclick="closeAlertBox()">Fermer</button>
       </div>
     <footer>
-        &copy; Romain Viktorovitch 2022 - Open Source <a href="license.html">MIT License</a><br> <a
-            href="cgu.html">Conditions Générales D'utilisations</a>
+        &copy; Romain Viktorovitch 2022 - Open Source  GNU AFFERO GENERAL PUBLIC LICENSE<br> <a
+            href="license.html">Conditions Générales D'utilisations</a>
     </footer>
 
     <script src="source\js\app.js"></script>
