--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </div>
 
     <div class="main">
-        <div id="about">
-            <div id="titre-main">
+        <div id="about" style="overflow-x: clip;">
+            <div id="titre-main" style="overflow-x: clip;">
                 <h1 id="titre" data-aos="fade-right" data-aos-duration="800">A Propos</h1>
             </div>
             <p data-aos="fade-left" data-aos-duration="900" data-aos-delay="200">Je m'appelle Romain, j'ai 16 ans, j'habite en France depuis 2012. Je suis actuellement en 1ère fillière
@@ -77,10 +77,10 @@
         </div>
         <div id="projects">
             <div id="titre-main">
-                <h1 id="titre">Mes Projets <span>BETA</span></h1>
+                <h1 id="titre" data-aos="fade-right" data-aos-duration="800">Mes Projets <span>BETA</span></h1>
             </div>
-            <div class="card-row">
-                <div class="card">
+            <div class="card-row" style="overflow-x: clip;">
+                <div class="card" data-aos="fade-right" data-aos-duration="800">
                     <img src="Capture.PNG" alt="Image 1">
                     <div class="card-text">
                         <h3><i class="fab fa-behance"></i></h3>
@@ -88,7 +88,7 @@
                                     class="fas fa-arrow-right"></i></a></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">
                     <img src="Capture.PNG" alt="Image 2">
                     <div class="card-text">
                         <h3><i class="fab fa-github"></i></h3>
@@ -96,7 +96,7 @@
                                     class="fas fa-arrow-right"></i></a></p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="fade-left" data-aos-duration="800" data-aos-delay="700">
                     <img src="Capture.PNG" alt="Image 3">
                     <div class="card-text">
                         <h3><i class="fab fa-behance"></i> - Belle Ile en Mer <span>NEW</span></h3>
