--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </div>
 
     <div class="main">
-        <div id="about" style="overflow-x: clip;">
-            <div id="titre-main" style="overflow-x: clip;">
+        <div id="about" style="overflow-x: hidden;">
+            <div id="titre-main" style="overflow-x: hidden;">
                 <h1 id="titre" data-aos="fade-right" data-aos-duration="800">A Propos</h1>
             </div>
             <p data-aos="fade-left" data-aos-duration="900" data-aos-delay="200">Je m'appelle Romain, j'ai 16 ans, j'habite en France depuis 2012. Je suis actuellement en 1ère fillière
@@ -79,7 +79,7 @@
             <div id="titre-main">
                 <h1 id="titre" data-aos="fade-right" data-aos-duration="800">Mes Projets <span>BETA</span></h1>
             </div>
-            <div class="card-row" style="overflow-x: clip;">
+            <div class="card-row" style="overflow-x: hidden;">
                 <div class="card" data-aos="fade-right" data-aos-duration="800">
                     <img src="Capture.PNG" alt="Image 1">
                     <div class="card-text">
