--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div id="titre-main">
                 <h1 id="titre" data-aos="fade-right" data-aos-duration="800">Mes Projets <span>BETA</span></h1>
             </div>
-            <div class="card-row" style="overflow-x: hidden;">
+            <div class="card-row" style="overflow-x: hidden; overflow-y: hidden;">
                 <div class="card" data-aos="fade-right" data-aos-duration="800">
                     <img src="Capture.PNG" alt="Image 1">
                     <div class="card-text">
